# ABCD_Algorithm

./: ABCD_main  CMakeLists.txt
dependencies/: eigen  libigl  matlab
mexed_solver/: CMakeLists.txt  CMakeLists.txt_old
mexed_solver/VS_mex/simple_mex/: stdafx.h
mexed_solver/mex/: ABCD_FixerOptimizer_2d_mex.cc  ABCD_FixerOptimizer_3d_mex.cc  ABCD_optimization_core_2d.cpp  ABCD_optimization_core_2d.h  ABCD_optimization_core_3d.cpp  ABCD_optimization_core_3d.h  GetMeshData_mex.cc  load_obj_mesh_mex.cc
mexed_solver/mex/cpp/common/solver/pardiso/: pardiso_solver.h
mexed_solver/mex/cpp/data_io/: data_io_utils.cpp  data_io_utils.h
mexed_solver/mex/cpp/energy_model/mesh_distortion/: isotropic_svd_energy_model_2d.h
wrapper/: main.cpp
